--- a/config/basic.conf
+++ b/config/basic.conf
@@ -1,3 +1,5 @@
+
+
 server {
 	listen			HOST:PORT
 	server_name		SERVER_NAME
@@ -12,8 +14,12 @@ server {
 	}
 }
 
+# test commentary
+
+	# test commentary
+
 server {
-	listen			HOST:PORT
+	listen			HOST:PORT	# commentary
 	server_name		SERVER_NAME
 	root			ROOT
 	index			INDEX
