--- a/config/basic.conf
+++ b/config/basic.conf
@@ -7,7 +7,8 @@ server {
 	index			INDEX
 	client_body		MAX_CLIENT_BODY
 	methods			METHOD1 METHOD2 ...
-	error_page		
+	error_page		ERRROR_NUM ERROR_URL
+	autoindex
 
 	location *.php {
 		cgi_pass	CGI
@@ -24,7 +25,7 @@ server {
 	root			ROOT	
 	index			INDEX
 	client_body		MAX_CLIENT_BODY
-	methods			METHOD1 METHOD2 ...
+	methods			METHOD1		  METHOD2 ...
 
 	location /DIRECTORY1 {
 		root			ROOT
