--- a/config/basic2.conf
+++ b/config/basic2.conf
@@ -7,7 +7,7 @@ server {
 	index			INDEX
 	client_body		MAX_CLIENT_BODY
 	methods			METHOD1 METHOD2 ...
-	error_page		
+	error_page		ERRROR_NUM ERROR_URL		
 
 	location *.php {
 		cgi_pass	CGI
@@ -18,7 +18,7 @@ server {
 
 	# test commentary
 
-server {
+server 		rev	 {
 	listen			HOST:PORT	# commentary
 	
 
@@ -45,5 +45,4 @@ server {
 	index			INDEX
 	client_body		MAX_CLIENT_BODY
 	methods			METHOD1 METHOD2 ...
-
 	}
