--- a/config/basic2.conf
+++ b/config/basic2.conf
@@ -22,7 +22,7 @@ server 		rev	 {
 	listen			HOST:PORT	# commentary
 	
 
-	location /DIRECTORY1 {
+	locations /DIRECTORY1 {
 		root			ROOT
 		index			INDEX
 		client_body		MAX_CLIENT_BODY
