headers and reorganized

--- a/config/basic.conf
+++ b/config/basic.conf
@@ -1,7 +1,7 @@
 
 
 server {
-	listen			HOST:PORT
+	listen			localhost:8080
 	server_name		SERVER_NAME
 	root			ROOT
 	index			INDEX
@@ -20,7 +20,7 @@ server {
 	# test commentary
 
 server {
-	listen			HOST:PORT	# commentary
+	listen			127.0.0.0:2156	# commentary
 	server_name		SERVER_NAME
 	root			ROOT	
 	index			INDEX
