--- a/config/basic.conf
+++ b/config/basic.conf
@@ -2,7 +2,7 @@
 
 server {
 	listen			localhost:8080
-	server_name		SERVER_NAME
+	server_name		SERVER_NAME0 SERVER_NAME1
 	root			ROOT
 	index			INDEX
 	client_body		MAX_CLIENT_BODY
