--- a/config/basic.conf
+++ b/config/basic.conf
@@ -4,10 +4,11 @@ server {
 	listen			localhost:8080
 	server_name		SERVER_NAME0 SERVER_NAME1
 	root			ROOT
-	index			INDEX
-	client_body		MAX_CLIENT_BODY
-	methods			METHOD1 METHOD2 ...
-	error_page		ERRROR_NUM ERROR_URL
+	index			INDEX0 INDEX1 INDEX2
+	client_body		100
+	methods			GET POST DELETE
+	error_page		ERRROR_NUM0 ERROR_PAGE0
+	error_page		ERRROR_NUM1 ERROR_PAGE1
 	autoindex
 
 	location *.php {
@@ -20,29 +21,29 @@ server {
 	# test commentary
 
 server {
-	listen			127.0.0.0:2156	# commentary
+	listen			127.0.0.0:65465	# commentary
 	server_name		SERVER_NAME
-	root			ROOT	
-	index			INDEX
-	client_body		MAX_CLIENT_BODY
-	methods			METHOD1		  METHOD2 ...
+	root			ROOT
+	index			INDEX3 INDEX4
+	client_body		100
+	methods			DELETE		  GET
 
 	location /DIRECTORY1 {
 		root			ROOT
 		index			INDEX
-		client_body		MAX_CLIENT_BODY
+		client_body		2000
 		methods			METHOD1 METHOD2 ...
 	}
 
 	location /DIRECTORY2 {
 		root			ROOT
-		index			INDEX
-		client_body		MAX_CLIENT_BODY
+		index			INDEX5 INDEX6 INDEX7
+		client_body		0
 		methods			METHOD1 METHOD2 ...
 		autoindex
 	}
 
 	location /TOREDIR {
-		return REDIR_NUM REDIR_URL
+		return REDIR_URL
 	}
 }
