error pages conf

--- a/config/basic.conf
+++ b/config/basic.conf
@@ -7,8 +7,8 @@ server {
 	index			INDEX0 INDEX1 INDEX2
 	client_body		100
 	methods			GET POST DELETE
-	error_page		ERRROR_NUM0 ERROR_PAGE0
-	error_page		ERRROR_NUM1 ERROR_PAGE1
+	error_page		300 ERROR_PAGE0
+	error_page		400 ERROR_PAGE1
 	autoindex
 
 	location *.php {
