--- a/config/basic.conf
+++ b/config/basic.conf
@@ -14,6 +14,8 @@ server {
 	location *.php {
 		cgi_pass	CGI
 	}
+
+	return REDIR_URL
 }
 
 # test commentary
@@ -32,14 +34,15 @@ server {
 		root			ROOT
 		index			INDEX
 		client_body		2000
-		methods			METHOD1 METHOD2 ...
+		error_page		400 ERROR_PAGE1
+		methods			GET
 	}
 
 	location /DIRECTORY2 {
 		root			ROOT
 		index			INDEX5 INDEX6 INDEX7
 		client_body		0
-		methods			METHOD1 METHOD2 ...
+		methods			POST DELETE
 		autoindex
 	}
 
