--- a/config/basic.conf
+++ b/config/basic.conf
@@ -42,7 +42,8 @@ server {
 		index			INDEX5 INDEX6 INDEX7
 		client_body		0
 		methods			POST DELETE
-		autoindex}
+		autoindex
+	}
 
 	location /TOREDIR {
 		return REDIR_URL
