--- a/config/basic2.conf
+++ b/config/basic2.conf
@@ -1,48 +1,51 @@
 
+# server 1
 
 server {
-	listen			HOST:PORT
-	server_name		SERVER_NAME
+	listen			127.0.0:8080
+	server_name		SERVER_NAME0 SERVER_NAME1
 	root			ROOT
-	index			INDEX
-	client_body		MAX_CLIENT_BODY
-	methods			METHOD1 METHOD2 ...
-	error_page		ERRROR_NUM ERROR_URL		
+	index			INDEX0 INDEX1 INDEX2
+	client_size		100
+	methods			GET POST DELETE
+	error_page		300 ERROR_PAGE0
+	error_page		400 ERROR_PAGE1
+	autoindex
 
 	location *.php {
 		cgi_pass	CGI
 	}
+
+	return REDIR_URL
 }
 
-# test commentary
+# server 2
 
-	# test commentary
+server {
+	listen			127.0.0.0:65465	# commentary
+	server_name		SERVER_NAME
+	root			ROOT
+	index			INDEX3 INDEX4
+	client_size		100
+	methods			DELETE		  GET
 
-server 		rev	 {
-	listen			HOST:PORT	# commentary
-	
-
-	locations /DIRECTORY1 {
+	location /DIRECTORY1 {
 		root			ROOT
 		index			INDEX
-		client_body		MAX_CLIENT_BODY
-		methods			METHOD1 METHOD2 ...
+		client_size		2000
+		error_page		400 ERROR_PAGE1
+		methods			GET
 	}
 
 	location /DIRECTORY2 {
 		root			ROOT
-		index			INDEX
-		client_body		MAX_CLIENT_BODY
-		methods			METHOD1 METHOD2 ...
+		index			INDEX5 INDEX6 INDEX7
+		client_size		0
+		methods			POST DELETE
 		autoindex
 	}
-	location /TOREDIR {
-		return REDIR_NUM REDIR_URL
-	}
 
-	server_name		SERVER_NAME
-	root			ROOT	
-	index			INDEX
-	client_body		MAX_CLIENT_BODY
-	methods			METHOD1 METHOD2 ...
+	location /TOREDIR {
+		return REDIR_URL
 	}
+}
