--- a/config/basic4.conf
+++ b/config/basic4.conf
@@ -2,8 +2,8 @@
 # server 1
 
 server {
-	listen			localhost:65800
-	server_name		SERVER_NAME0 SERVER_NAME1
+	listen			localhost:8080
+	server_name		
 	root			ROOT
 	index			INDEX0 INDEX1 INDEX2
 	client_size		100
