--- a/config/basic5.conf
+++ b/config/basic5.conf
@@ -2,10 +2,10 @@
 # server 1
 
 server {
-	listen			localhost:65800
+	listen			localhost:8080
 	server_name		SERVER_NAME0 SERVER_NAME1
 	root			ROOT
-	index			INDEX0 INDEX1 INDEX2
+	index			
 	client_size		100
 	methods			GET POST DELETE
 	error_page		300 ERROR_PAGE0
