--- a/config/wrong08.conf
+++ b/config/wrong08.conf
@@ -5,7 +5,7 @@ server {
 	listen			localhost:8080
 	server_name		SERVER_NAME0 SERVER_NAME1
 	root			ROOT
-	index			INDEX0 INDEX1 INDEX2
+	index			index{html INDEX1 INDEX2
 	client_size		100
 	methods			GET POST DELETE
 	error_page		300 ERROR_PAGE0
