--- a/config/wrong17.conf
+++ b/config/wrong17.conf
@@ -31,7 +31,7 @@ server {
 
 	location /DIRECTORY1 {
 		root			ROOT
-		index			INDEX
+		index			IN{DEX
 		client_size		2000
 		error_page		400 ERROR_PAGE1
 		methods			GET
