--- a/config/wrong18.conf
+++ b/config/wrong18.conf
@@ -34,7 +34,7 @@ server {
 		index			INDEX
 		client_size		2000
 		error_page		400 ERROR_PAGE1
-		methods			GET
+		methods			GET LR
 	}
 
 	location /DIRECTORY2 {
