--- a/config/wrong09.conf
+++ b/config/wrong09.conf
@@ -3,7 +3,7 @@
 
 server {
 	listen			localhost:8080
-	server_name		SERVER_NAME0 SERVER_NAME1
+	server_name		SERVER_NAME0 SERVER_NAME{1
 	root			ROOT
 	index			INDEX0 INDEX1 INDEX2
 	client_size		100
