--- a/config/wrong11.conf
+++ b/config/wrong11.conf
@@ -10,7 +10,7 @@ server {
 	methods			GET POST DELETE
 	error_page		300 ERROR_PAGE0
 	error_page		400 ERROR_PAGE1
-	autoindex
+	autoindex	on
 
 	location *.php {
 		cgi_pass	CGI
