--- a/config/wrong16.conf
+++ b/config/wrong16.conf
@@ -6,17 +6,18 @@ server {
 	server_name		SERVER_NAME0 SERVER_NAME1
 	root			ROOT
 	index			INDEX0 INDEX1 INDEX2
-	client_size		-1
+	client_size		100
 	methods			GET POST DELETE
-	
-	location *.php {
-		cgi_pass	CGI
-	}
 	error_page		300 ERROR_PAGE0
 	error_page		400 ERROR_PAGE1
 	autoindex
 
+	location *.php {
+		cgi_pass	CGI
+	}
+
 	return REDIR_URL
+}
 
 # server 2
 
@@ -29,7 +30,7 @@ server {
 	methods			DELETE		  GET
 
 	location /DIRECTORY1 {
-		root			ROOT
+		root			{ROOT
 		index			INDEX
 		client_size		2000
 		error_page		400 ERROR_PAGE1
