--- a/config/basic.conf
+++ b/config/basic.conf
@@ -12,6 +12,14 @@ server {
 	error_page		400 ERROR_PAGE1
 	autoindex
 
+	location /DIRECTORY1/ {
+		root			ROOT1
+		index			INDEX
+		client_size		2000
+		error_page		400 ERROR_PAGE1
+		methods			GET
+	}
+	
 	location *.php {
 		cgi_pass	CGI
 	}
@@ -38,7 +46,15 @@ server {
 	}
 
 	location /DIRECTORY2 {
-		root			ROOT4
+		root			ROOT2
+		index			INDEX5 INDEX6 INDEX7
+		client_size		0
+		methods			POST DELETE
+		autoindex
+	}
+
+	location /DIRECTORY2/DIRECTORY3 {
+		root			ROOT3
 		index			INDEX5 INDEX6 INDEX7
 		client_size		0
 		methods			POST DELETE
