--- a/config/basic.conf
+++ b/config/basic.conf
@@ -4,7 +4,7 @@
 server {
 	listen			localhost:8080
 	server_name		SERVER_NAME0 SERVER_NAME1
-	root			ROOT
+	root			ROOT0
 	index			INDEX0 INDEX1 INDEX2
 	client_size		100
 	methods			GET POST DELETE
@@ -12,6 +12,14 @@ server {
 	error_page		400 ERROR_PAGE1
 	autoindex
 
+	location /DIRECTORY1/ {
+		root			ROOT1
+		index			INDEX
+		client_size		2000
+		error_page		400 ERROR_PAGE1
+		methods			GET
+	}
+	
 	location *.php {
 		cgi_pass	CGI
 	}
@@ -24,13 +32,13 @@ server {
 server {
 	listen			127.0.0.2:65465	# commentary
 	server_name		SERVER_NAME
-	root			ROOT
+	root			ROOT2
 	index			INDEX3 INDEX4
 	client_size		100
 	methods			DELETE		  GET
 
 	location /DIRECTORY1 {
-		root			ROOT
+		root			ROOT3/
 		index			INDEX
 		client_size		2000
 		error_page		400 ERROR_PAGE1
@@ -38,7 +46,15 @@ server {
 	}
 
 	location /DIRECTORY2 {
-		root			ROOT
+		root			ROOT2
+		index			INDEX5 INDEX6 INDEX7
+		client_size		0
+		methods			POST DELETE
+		autoindex
+	}
+
+	location /DIRECTORY2/DIRECTORY3 {
+		root			ROOT3
 		index			INDEX5 INDEX6 INDEX7
 		client_size		0
 		methods			POST DELETE
