--- a/config/basic.conf
+++ b/config/basic.conf
@@ -4,7 +4,7 @@
 server {
 	listen			localhost:8080
 	server_name		SERVER_NAME0 SERVER_NAME1
-	root			ROOT0
+	root			html/
 	index			INDEX0 INDEX1 INDEX2
 	client_size		100
 	methods			GET POST DELETE
