--- a/config/wrong/wrong06.conf
+++ b/config/wrong/wrong06.conf
@@ -14,7 +14,7 @@ server {
 	}
 	error_page		300 ERROR_PAGE0
 	error_page		400 ERROR_PAGE1
-	autoindex
+	autoindex		on
 
 	return REDIR_URL
 }
@@ -42,7 +42,7 @@ server {
 		index			INDEX5 INDEX6 INDEX7
 		client_size		0
 		methods			POST DELETE
-		autoindex
+		autoindex		on
 	}
 
 	location /TOREDIR {
