--- a/config/basic.conf
+++ b/config/basic.conf
@@ -10,14 +10,15 @@ server {
 	methods			GET POST DELETE
 	error_page		300 ERROR_PAGE0
 	error_page		400 ERROR_PAGE1
-	autoindex
+	autoindex		on
 
 	location /DIRECTORY1/ {
 		root			ROOT1
 		index			INDEX
 		client_size		2000
-		error_page		400 ERROR_PAGE1
+		error_page		400 ERROR_PAGE2
 		methods			GET
+		autoindex		off
 	}
 	
 	location *.php {
@@ -33,7 +34,6 @@ server {
 	listen			127.0.0.2:65465	# commentary
 	server_name		SERVER_NAME
 	root			ROOT2
-	index			INDEX3 INDEX4
 	client_size		100
 	methods			DELETE		  GET
 
@@ -41,24 +41,24 @@ server {
 		root			ROOT3/
 		index			INDEX
 		client_size		2000
-		error_page		400 ERROR_PAGE1
+		error_page		404 ERROR_PAGE3
 		methods			GET
 	}
 
 	location /DIRECTORY2 {
-		root			ROOT2
+		root			ROOT4
 		index			INDEX5 INDEX6 INDEX7
 		client_size		0
 		methods			POST DELETE
-		autoindex
+		autoindex		on
 	}
 
 	location /DIRECTORY2/DIRECTORY3 {
-		root			ROOT3
-		index			INDEX5 INDEX6 INDEX7
+		root			ROOT5
+		index			INDEX8 INDEX9 INDEX10
 		client_size		0
 		methods			POST DELETE
-		autoindex
+		autoindex		on
 	}
 
 	location /TOREDIR {
