--- a/config/wrong/wrong08.conf
+++ b/config/wrong/wrong08.conf
@@ -10,7 +10,7 @@ server {
 	methods			GET POST DELETE
 	error_page		300 ERROR_PAGE0
 	error_page		400 ERROR_PAGE1
-	autoindex
+	autoindex		on
 
 	location *.php {
 		cgi_pass	CGI
@@ -42,7 +42,7 @@ server {
 		index			INDEX5 INDEX6 INDEX7
 		client_size		0
 		methods			POST DELETE
-		autoindex
+		autoindex		on
 	}
 
 	location /TOREDIR {
