modif lucie compilation ecole

--- a/config/wrong/wrong18.conf
+++ b/config/wrong/wrong18.conf
@@ -4,7 +4,7 @@
 server {
 	listen			localhost:8080
 	server_name		SERVER_NAME0 SERVER_NAME1
-	root			ROOT0
+	root			ROOT
 	index			INDEX0 INDEX1 INDEX2
 	client_size		100
 	methods			GET POST DELETE
@@ -12,15 +12,6 @@ server {
 	error_page		400 ERROR_PAGE1
 	autoindex		on
 
-	location /DIRECTORY1/ {
-		root			ROOT1
-		index			INDEX
-		client_size		2000
-		error_page		400 ERROR_PAGE2
-		methods			GET
-		autoindex		off
-	}
-	
 	location *.php {
 		cgi_pass	CGI
 	}
@@ -31,31 +22,24 @@ server {
 # server 2
 
 server {
-	listen			127.0.0.2:65465	# commentary
+	listen			127.0.0.0:65465	# commentary
 	server_name		SERVER_NAME
-	root			ROOT2
+	root			ROOT
+	index			INDEX3 INDEX4
 	client_size		100
 	methods			DELETE		  GET
 
 	location /DIRECTORY1 {
-		root			ROOT3/
+		root			ROOT
 		index			INDEX
 		client_size		2000
-		error_page		404 ERROR_PAGE3
-		methods			GET
+		error_page		400 ERROR_PAGE1
+		methods			GET LR
 	}
 
 	location /DIRECTORY2 {
-		root			ROOT4
+		root			ROOT
 		index			INDEX5 INDEX6 INDEX7
-		client_size		0
-		methods			POST DELETE
-		autoindex		on
-	}
-
-	location /DIRECTORY2/DIRECTORY3 {
-		root			ROOT5
-		index			INDEX8 INDEX9 INDEX10
 		client_size		0
 		methods			POST DELETE
 		autoindex		on
