--- a/config/basic.conf
+++ b/config/basic.conf
@@ -1,67 +1,45 @@
-
-# server 1
-
 server {
 	listen			localhost:8080
-	server_name		SERVER_NAME0 SERVER_NAME1
-	root			ROOT0
-	index			INDEX0 INDEX1 INDEX2
-	client_size		100
+	server_name		webserv
+	root			/html
+	index			index.html
 	methods			GET POST DELETE
-	error_page		300 ERROR_PAGE0
-	error_page		400 ERROR_PAGE1
-	autoindex		on
+	error_page		400 404.html
+	error_page		404 405.html
+	error_page		405 400.html
 
-	location /DIRECTORY1/ {
-		root			ROOT1
-		index			INDEX
+	location /images {
 		client_size		2000
-		error_page		400 ERROR_PAGE2
 		methods			GET
-		autoindex		off
+		autoindex		on
 	}
 	
 	location *.php {
-		cgi_pass	CGI
+		cgi_pass	bin-cgi/script.sh
 	}
-
-	return REDIR_URL
 }
 
-# server 2
-
 server {
-	listen			127.0.0.2:65465	# commentary
-	server_name		SERVER_NAME
-	root			ROOT2
-	client_size		100
-	methods			DELETE		  GET
+	listen			127.0.0.2:9090
+	server_name		webserv2
+	root			/
+	autoindex		on
 
-	location /DIRECTORY1 {
-		root			ROOT3/
-		index			INDEX
+	location /sources {
+		index			/html/index.html
 		client_size		2000
-		error_page		404 ERROR_PAGE3
-		methods			GET
 	}
 
-	location /DIRECTORY2 {
-		root			ROOT4
-		index			INDEX5 INDEX6 INDEX7
-		client_size		0
-		methods			POST DELETE
+	location /includes {
+
+	}
+
+	location /sources/parsing {
+		index			wrong_index.html
 		autoindex		on
 	}
 
-	location /DIRECTORY2/DIRECTORY3 {
-		root			ROOT5
-		index			INDEX8 INDEX9 INDEX10
-		client_size		0
-		methods			POST DELETE
-		autoindex		on
-	}
-
-	location /TOREDIR {
-		return REDIR_URL
+	location /sources/engine {
+		return 			https://profile.intra.42.fr
 	}
 }
