--- a/config/template.conf
+++ b/config/template.conf
@@ -4,14 +4,23 @@
 server {
 	listen			localhost:8080
 	server_name		SERVER_NAME0 SERVER_NAME1
-	root			ROOT
+	root			ROOT0
 	index			INDEX0 INDEX1 INDEX2
 	client_size		100
 	methods			GET POST DELETE
 	error_page		300 ERROR_PAGE0
 	error_page		400 ERROR_PAGE1
-	autoindex
+	autoindex		on
 
+	location /DIRECTORY1/ {
+		root			ROOT1
+		index			INDEX
+		client_size		2000
+		error_page		400 ERROR_PAGE2
+		methods			GET
+		autoindex		off
+	}
+	
 	location *.php {
 		cgi_pass	CGI
 	}
@@ -22,27 +31,34 @@ server {
 # server 2
 
 server {
-	listen			127.0.0.0:65465	# commentary
+	listen			127.0.0.2:65465	# commentary
 	server_name		SERVER_NAME
-	root			ROOT
-	index			INDEX3 INDEX4
+	root			ROOT2
 	client_size		100
 	methods			DELETE		  GET
 
 	location /DIRECTORY1 {
-		root			{ROOT
+		root			ROOT3/
 		index			INDEX
 		client_size		2000
-		error_page		400 ERROR_PAGE1
+		error_page		404 ERROR_PAGE3
 		methods			GET
 	}
 
 	location /DIRECTORY2 {
-		root			ROOT
+		root			ROOT4
 		index			INDEX5 INDEX6 INDEX7
 		client_size		0
 		methods			POST DELETE
-		autoindex
+		autoindex		on
+	}
+
+	location /DIRECTORY2/DIRECTORY3 {
+		root			ROOT5
+		index			INDEX8 INDEX9 INDEX10
+		client_size		0
+		methods			POST DELETE
+		autoindex		on
 	}
 
 	location /TOREDIR {
