redir almost ok

--- a/config/basic.conf
+++ b/config/basic.conf
@@ -1,7 +1,7 @@
 server {
 	listen			localhost:8080
 	server_name		webserv
-	root			/html
+	root			html/
 	index			index.html
 	methods			GET POST DELETE
 	error_page		400 404.html
@@ -13,7 +13,10 @@ server {
 		methods			GET
 		autoindex		on
 	}
-	
+	location /index.html {
+		root form.html
+	}
+
 	location *.php {
 		cgi_pass	bin-cgi/script.sh
 	}
