--- a/config/basic.conf
+++ b/config/basic.conf
@@ -4,9 +4,9 @@ server {
 	root			/html
 	index			index.html
 	methods			GET POST DELETE
-	error_page		400 404.html
-	error_page		404 405.html
-	error_page		405 400.html
+	error_page		400 400.html
+	error_page		405 405.html
+	error_page		404 404.html
 
 	location /images {
 		client_size		2000
@@ -25,11 +25,6 @@ server {
 	root			/
 	autoindex		on
 
-	location /sources {
-		index			/html/index.html
-		client_size		2000
-	}
-
 	location /includes {
 
 	}
@@ -40,6 +35,6 @@ server {
 	}
 
 	location /sources/engine {
-		return 			https://profile.intra.42.fr
+		return 			https://www.google.com
 	}
 }
