getprotocol in default pages and autoindex

--- a/config/basic.conf
+++ b/config/basic.conf
@@ -38,3 +38,18 @@ server {
 		return 			https://www.google.com
 	}
 }
+
+server {
+	listen			localhost:8081
+	server_name		webserv
+	root			/html
+	methods			GET POST DELETE
+	error_page		400 400.html
+	error_page		405 405.html
+	error_page		404 404.html
+	autoindex		on
+	
+	location *.php {
+		cgi_pass	bin-cgi/script.sh
+	}
+}
