--- a/config/basic.conf
+++ b/config/basic.conf
@@ -13,9 +13,9 @@ server {
 		methods			GET
 		autoindex		on
 	}
-	location /index.html {
-		root form.html
-	}
+	# location /index.html {
+	# 	root form.html
+	# }
 
 	location *.php {
 		cgi_pass	bin-cgi/script.sh
@@ -43,6 +43,6 @@ server {
 	}
 
 	location /sources/engine {
-		return 			https://profile.intra.42.fr
+		return 			https://www.google.com
 	}
 }
