fix cgi and path for script

--- a/config/basic.conf
+++ b/config/basic.conf
@@ -24,14 +24,10 @@ server {
 	server_name		webserv2
 	root			/
 	autoindex		on
-
-	location /includes {
-
-	}
-
+	
 	location /sources/parsing {
 		index			wrong_index.html
-		autoindex		on
+		error_page		404 /html/404.html
 	}
 
 	location /sources/engine {
@@ -44,9 +40,6 @@ server {
 	server_name		webserv
 	root			/html
 	methods			GET POST DELETE
-	error_page		400 400.html
-	error_page		405 405.html
-	error_page		404 404.html
 	autoindex		on
 	
 	location *.php {
