--- a/config/basic.conf
+++ b/config/basic.conf
@@ -1,22 +1,19 @@
 server {
 	listen			localhost:8080
 	server_name		webserv
-	root			html/
+	root			/html
 	index			index.html
-	methods			GET POST DELETE HEAD
-	error_page		400 404.html
-	error_page		404 405.html
-	error_page		405 400.html
+	methods			GET POST DELETE
+	error_page		400 400.html
+	error_page		405 405.html
+	error_page		404 404.html
 
 	location /images {
 		client_size		2000
 		methods			GET
 		autoindex		on
 	}
-	# location /index.html {
-	# 	root form.html
-	# }
-
+	
 	location *.php {
 		cgi_pass	bin-cgi/script.sh
 	}
@@ -27,22 +24,25 @@ server {
 	server_name		webserv2
 	root			/
 	autoindex		on
-
-	location /sources {
-		index			/html/index.html
-		client_size		2000
-	}
-
-	location /includes {
-
-	}
-
+	
 	location /sources/parsing {
 		index			wrong_index.html
-		autoindex		on
+		error_page		404 /html/404.html
 	}
 
 	location /sources/engine {
 		return 			https://www.google.com
+	}
+}
+
+server {
+	listen			localhost:8081
+	server_name		webserv
+	root			/html
+	methods			GET POST DELETE
+	autoindex		on
+	
+	location *.php {
+		cgi_pass	bin-cgi/script.sh
 	}
 }
