cgi are working from the real script to the right file, env is ok, reste a comprendre le bug avec ou sans env en fonction du .php demander, reste la de-fragmentation des requetes (body)

--- a/config/basic.conf
+++ b/config/basic.conf
@@ -15,7 +15,7 @@ server {
 	}
 	
 	location *.php {
-		cgi_pass	bin-cgi/script.sh
+		cgi_pass	/usr/bin/php-cgi
 	}
 }
 
@@ -43,6 +43,6 @@ server {
 	autoindex		on
 	
 	location *.php {
-		cgi_pass	bin-cgi/script.sh
+		cgi_pass	/usr/bin/php-cgi
 	}
 }
