delete and options

--- a/config/basic.conf
+++ b/config/basic.conf
@@ -14,8 +14,11 @@ server {
 		autoindex		on
 	}
 	
+	location /coucou.html {
+		methods			DELETE
+	}
 	location *.php {
-		cgi_pass	bin-cgi/script.sh
+		cgi_pass	/usr/bin/php-cgi
 	}
 }
 
@@ -43,6 +46,6 @@ server {
 	autoindex		on
 	
 	location *.php {
-		cgi_pass	bin-cgi/script.sh
+		cgi_pass	/usr/bin/php-cgi
 	}
 }
