--- a/config/basic.conf
+++ b/config/basic.conf
@@ -3,7 +3,7 @@ server {
 	server_name		webserv
 	root			/html
 	index			index.html
-	methods			GET POST DELETE
+	methods			GET POST DELETE OPTIONS
 	error_page		400 400.html
 	error_page		405 405.html
 	error_page		404 404.html
