--- a/config/basic.conf
+++ b/config/basic.conf
@@ -1,6 +1,6 @@
 server {
 	listen			localhost:8080
-	server_name		webserv
+	server_name		webserv/3.0
 	root			/html
 	index			index.html
 	methods			GET POST DELETE OPTIONS
