add php cgi on server2

--- a/config/basic.conf
+++ b/config/basic.conf
@@ -33,6 +33,10 @@ server {
 	location /sources/engine {
 		return 			https://www.google.com
 	}
+
+	location *.php {
+		cgi_pass	/usr/bin/php-cgi
+	}
 }
 
 server {
