fix reponse format and reading request

--- a/config/basic.conf
+++ b/config/basic.conf
@@ -8,7 +8,7 @@ server {
 	error_page		405 405.html
 	error_page		404 404.html
 
-	location /images {
+	location /download {
 		client_size		2000
 		methods			GET
 		autoindex		on
@@ -27,11 +27,15 @@ server {
 	
 	location /sources/parsing {
 		index			wrong_index.html
-		error_page		404 /html/404.html
+		error_page		404 html/404.html
 	}
 
 	location /sources/engine {
 		return 			https://www.google.com
+	}
+
+	location /sources/response {
+		index			html/index.html
 	}
 
 	location *.php {
