--- a/config/basic.conf
+++ b/config/basic.conf
@@ -3,17 +3,21 @@ server {
 	server_name		webserv/3.0
 	root			/html
 	index			index.html
-	methods			GET POST DELETE OPTIONS
+	methods			GET POST OPTIONS
 	error_page		400 400.html
 	error_page		405 405.html
 	error_page		404 404.html
+	client_size		20000
 
 	location /download {
 		client_size		2000
 		methods			GET
 		autoindex		on
 	}
-	
+	location /bin {
+		methods		DELETE
+	}
+
 	location *.php {
 		cgi_pass	/usr/bin/php-cgi
 	}
