upload finished, gerer avec tmpfile, dir bin pour DELETE

--- a/config/basic.conf
+++ b/config/basic.conf
@@ -3,7 +3,7 @@ server {
 	server_name		webserv/3.0
 	root			/html
 	index			index.html
-	methods			GET POST DELETE OPTIONS
+	methods			GET POST OPTIONS
 	error_page		400 400.html
 	error_page		405 405.html
 	error_page		404 404.html
@@ -12,6 +12,10 @@ server {
 		client_size		2000
 		methods			GET
 		autoindex		on
+	}
+
+	location /bin {
+		methods			DELETE
 	}
 	
 	location *.php {
