conforme a la branche main

--- a/config/basic.conf
+++ b/config/basic.conf
@@ -7,17 +7,17 @@ server {
 	error_page		400 400.html
 	error_page		405 405.html
 	error_page		404 404.html
+	client_size		20000
 
-	location /images {
+	location /download {
 		client_size		2000
 		methods			GET
 		autoindex		on
 	}
-
 	location /bin {
-		methods			DELETE
+		methods		DELETE
 	}
-	
+
 	location *.php {
 		cgi_pass	/usr/bin/php-cgi
 	}
@@ -31,11 +31,15 @@ server {
 	
 	location /sources/parsing {
 		index			wrong_index.html
-		error_page		404 /html/404.html
+		error_page		404 html/404.html
 	}
 
 	location /sources/engine {
 		return 			https://www.google.com
+	}
+
+	location /sources/response {
+		index			html/index.html
 	}
 
 	location *.php {
