--- a/config/basic.conf
+++ b/config/basic.conf
@@ -3,7 +3,7 @@ server {
 	server_name		webserv/3.0
 	root			/html
 	index			index.html
-	methods			GET POST OPTIONS
+	methods			GET OPTIONS
 	error_page		400 400.html
 	error_page		405 405.html
 	error_page		404 404.html
@@ -19,6 +19,7 @@ server {
 	}
 
 	location *.php {
+		methods		GET POST
 		cgi_pass	/usr/bin/php-cgi
 	}
 }
