--- a/config/basic.conf
+++ b/config/basic.conf
@@ -3,19 +3,23 @@ server {
 	server_name		webserv/3.0
 	root			/html
 	index			index.html
-	methods			GET POST DELETE OPTIONS
+	methods			GET OPTIONS
 	error_page		400 400.html
 	error_page		405 405.html
 	error_page		404 404.html
-	client_size		1
+	client_size		70000
 
-	location /images {
+	location /download {
 		client_size		2000
 		methods			GET
 		autoindex		on
 	}
-	
+	location /bin {
+		methods		DELETE
+	}
+
 	location *.php {
+		methods		GET POST
 		cgi_pass	/usr/bin/php-cgi
 	}
 }
@@ -28,11 +32,15 @@ server {
 	
 	location /sources/parsing {
 		index			wrong_index.html
-		error_page		404 /html/404.html
+		error_page		404 html/404.html
 	}
 
 	location /sources/engine {
 		return 			https://www.google.com
+	}
+
+	location /sources/response {
+		index			html/index.html
 	}
 
 	location *.php {
